updated generation of covariate files

--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -14,5 +14,10 @@
     {
         "nodes"     : 2,
         "memory"    : 5000
+    },
+    "normalize_expression" :
+    {
+        "nodes"     : 2,
+        "memory"    : 15000
     }
 }
