updated to only call anc-het eqtls on prev. reported significant hits

--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -23,5 +23,9 @@
     "partition_samples":
     {
         "memory"    : 15000
+    },
+    "identify_hits":
+    {
+        "memory"    : 30000
     }
 }
