--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -32,5 +32,13 @@
     {
         "output"    : "slurm/{rule}.{wildcards.SNP}.out",
         "error"     : "slurm/{rule}.{wildcards.SNP}.err"
+    },
+    "prep_pheno_filei":
+    {
+        "memory"    : 1
+    },
+    "prep_SNP_file":
+    {
+        "memory"    : 1
     }
 }
