--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -4,56 +4,67 @@
         "queue"     : "pritch,owners,hns,normal",
         "nodes"     : 1,
         "tasks"     : 1,
-        "memory"    : 1000,
-        "time"      : "1:00:00",
+        "memory"    : 300,
+        "time"      : "5:00",
         "name"      : "{rule}",
         "output"    : "slurm/{rule}.out",
         "error"     : "slurm/{rule}.err"
     },
-    "annotate_genes" :
+    "annotate_genes":
     {
-        "nodes"     : 2,
-        "memory"    : 5000
+        "memory"    : 5000,
+        "time"      : "30:00"
     },
-    "normalize_expression" :
+    "normalize_expression":
     {
-        "nodes"     : 2,
-        "memory"    : 15000
+        "memory"    : 5000,
+        "time"      : "30:00"
+    },
+    "indiv_filter":
+    {
+        "time"      : "1:00:00"
+    },
+    "MAF_filter":
+    {
+        "memory"    : 1000,
+        "time"      : "2:00:00"
+    },
+    "find_indep_snps":
+    {
+        "time"      : "10:00"
+    },
+    "prune":
+    {
+        "time"      : "10:00"
+    },
+    "prep_covariates":
+    {
+        "memory"    : 15000,
+        "time"      : "10:00"
+    },
+    "make_anc_bed":
+    {
+        "memory"    : 500
+    },
+    "intersect_tracts_genes":
+    {
+        "memory"    : 1000
     },
     "partition_samples":
     {
-        "memory"    : 15000
+        "memory"    : 15000,
+        "time"      : "2:00:00"
+    },
+    "subset_geno":
+    {
+        "memory"    : 1000
+    },
+    "call_eQTLs":
+    {
+        "time"      : "1:00:00"
     },
     "identify_hits":
     {
         "memory"    : 2000
-    },
-    "anc_het_eQTLs":
-    {
-        "output"    : "slurm/{rule}.{wildcards.SNP}.out",
-        "error"     : "slurm/{rule}.{wildcards.SNP}.err"
-    },
-    "prep_pheno_file":
-    {
-        "memory"    : 100,
-        "time"      : "10:00"
-    },
-    "estimate_eQTLs":
-    {
-        "time"      : "30:00"
-    },
-    "ascertain_eQTLs":
-    {
-        "time"      : "30:00"
-    },
-    "perform_simulation":
-    {
-        "time"      : "5:00",
-        "memory"    : 200
-    },
-    "merge_sims":
-    {
-        "time"      : "30:00",
-        "memory"    : 200
     }
 }
