--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ tmp
 tmp/*
 plots/*
 gtex_eqtl_V8.sif
+scripts/__pycache__
+scripts/__pycache__/*
 scripts/src/__pycache__
 scripts/src/__pycache__/*
 scripts/slurm_submission
