--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -46,6 +46,11 @@
     {
         "memory"    : 1000
     },
+    "add_validation_samp":
+    {
+        "memory"    : 15000,
+        "time"      : "2:00:00"
+    },
     "partition_samples":
     {
         "memory"    : 15000,
