--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -72,5 +72,10 @@
     "identify_hits":
     {
         "memory"    : 2000
+    },
+    "model":
+    {
+        "time"      : "4:00:00",
+        "memory"    : 3000
     }
 }
