--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -20,26 +20,39 @@
         "memory"    : 15000,
         "time"      : "30:00"
     },
-    "indiv_filter":
+    "snp_filter":
     {
         "time"      : "1:00:00"
+    },
+    "indiv_filter":
+    {
+        "time"      : "30:00"
+    },
+    "prune":
+    {
+        "time"      : "20:00"
     },
     "MAF_filter":
     {
         "time"      : "20:00"
     },
-    "generate_group_PC":
+    "PCA":
     {
-        "memory"    : 15000,
-        "time"      : "10:00"
+        "memory"    : 30000,
+        "time"      : "30:00"
     },
     "prep_covariates":
     {
         "memory"    : 15000,
         "time"      : "10:00"
     },
+    "find_indep_snps":
+    {
+        "memory"    : 5000
+    },
     "make_anc_bed":
     {
+        "time"      : "20:00",
         "memory"    : 500
     },
     "intersect_tracts_genes":
@@ -76,6 +89,7 @@
     },
     "extract_hits":
     {
+        "time"      : "30:00",
         "memory"    : 3000
     },
     "identify_hits":
@@ -84,36 +98,37 @@
     },
     "perform_simulation":
     {
-        "time"      : "15:00",
-        "memory"    : 5000
+        "time"      : "30:00",
+        "memory"    : 20000
     },
     "merge_data":
     {
         "time"      : "2:00:00",
-        "memory"    : 10000
+        "memory"    : 30000
     },
     "bootstrap":
     {
         "time"      : "15:00",
-        "memory"    : 2000
-    },
-    "optimize_no_het":
-    {
-        "memory"    : 3000
+        "memory"    : 5000
     },
     "optimize_simulated_data":
     {
-        "memory"    : 2000,
-        "time"      : "30:00"
+        "time"      : "15:00",
+        "memory"    : 5000
     },
-    "optimize":
+    "correlate_expression":
     {
         "time"      : "30:00",
         "memory"    : 2000
     },
+    "optimize":
+    {
+        "time"      : "15:00",
+        "memory"    : 5000
+    },
     "likelihood":
     {
-        "memory"    : 3000,
-        "time"      : "5:00:00"
+        "memory"    : 10000,
+        "time"      : "24:00:00"
     }
 }
