modified pipeline to store information on partition of individuals in a single file

--- a/scripts/sm_slurm_config.json
+++ b/scripts/sm_slurm_config.json
@@ -131,7 +131,17 @@
         "time"      : "30:00",
         "memory"    : 10000
     },
+    "anova_analysis":
+    {
+        "time"      : "15:00",
+        "memory"    : 5000
+    },
     "optimize":
+    {
+        "time"      : "15:00",
+        "memory"    : 5000
+    },
+    "optimize_unconstrained":
     {
         "time"      : "15:00",
         "memory"    : 5000
